# python-project-83

./: .flake8  .gitignore  Makefile  README.md  bd_commands.sql  database.sql  pyproject.toml  test.py
.github/workflows/: github-actions.yml
page-analyzer/: __init__.py  app.py  test.py
page_analyzer/: __init__.py  app.py  code_insert.py  connection.py  find_tags.py  request_url.py  test.py  url_validator.py
page_analyzer/templates/: 404.html  base.html  id_urls.html  main_page.html  test.html  url_check.html  urls.html
